--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-langchain-core>=0.1.50
-langchain-community>=0.0.21
-langchain-openai>=0.1.6
-langchain-text-splitters>=0.0.1
-chromadb>=0.4.24
-python-dotenv
-tqdm
-beautifulsoup4
-lxml
+langchain-community==0.3.24
+langchain-openai==0.3.18
+langchain-text-splitters==0.3.8
+langchain-huggingface==0.2.0
+chromadb==0.4.24
+transformers==4.42.2
+python-dotenv==1.0.1
+tqdm==4.67.1
+beautifulsoup4==4.12.3
+lxml==5.2.1
+tokenizers>=0.19.1
