--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+fastapi==0.110.0
 langchain-community==0.3.24
-langchain-openai==0.3.18
-langchain-text-splitters==0.3.8
 langchain-huggingface==0.2.0
-chromadb==0.4.24
+ctransformers==0.2.27
 transformers==4.42.2
 python-dotenv==1.0.1
+pydantic==2.7.1
+scikit-learn==1.5.0
+numpy==1.26.4
 tqdm==4.67.1
 beautifulsoup4==4.12.3
 lxml==5.2.1
-tokenizers>=0.19.1
